# pyakl

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml  status.md
dev-log/: T-BOX-01.md  T-BUILTIN-02.md  T-ENGINE-02-FIX.md  T-ENGINE-02.md  T-PARSE-03.md  T-SPLIT-01.md
docs/: TASK-TEMPLATE.md  akl-execution-state.md  architecture.md  backlog.md  deep-guards.md  ports.md  vision.md  wasm.md
pyakl/: __init__.py  __main__.py  akl_engine.py  builtin.py  copy.py  engine.py  interpreter.py  parser.py  printer.py  program.py  repl.py  scheduler.py  term.py  unify.py
tests/: __init__.py  test_akl_files.py  test_builtin.py  test_copy.py  test_engine.py  test_guards.py  test_interpreter.py  test_parser.py  test_printer.py  test_program.py  test_repl.py  test_term.py  test_unify.py
wotan/: backlog.json
wotan/dev-log/: T-ENGINE-01.md  T-ENGINE-02-FIX.md  T-ENGINE-03.md  T-ENGINE-04.md  T-GUARD-01.md  T-PARSE-01.md  T-PARSE-02.md  T-SPLIT-02.md  T-SPLIT-03.md  T-TERM-01.md  TASK-TEMPLATE.md
